# mangle_detached_console

./: Cargo.toml  README.md
src/: lib.rs
