[package]
name = "mangle_detached_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangle_local_pipes = { git = "https://github.com/manglemix/mangle_local_pipes.git" }
tokio = { version = "1.19.2" , features = ["sync"] }