[package]
name = "mangle-detached-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.2.1", features = ["tokio_support"] }
tokio = { version = "1.19.2" , features = ["rt", "sync"] }
futures-lite = "1.12.0"